--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/cli": "^11.0.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mysql": "^2.18.1",
