--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host localhost --port 80",
+    "start": "ng serve --host 10.224.1.29 --port 80",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,11 +19,18 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@okta/jwt-verifier": "^1.0.1",
+    "body-parser": "latest",
     "bootstrap": "^4.5.3",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "express-bearer-token": "2.4.0",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.10",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
+    "uid-safe": "^2.1.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -44,5 +51,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
-  }
+  },
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/benjkap/Desktop-turbo.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/benjkap/Desktop-turbo/issues"
+  },
+  "homepage": "https://github.com/benjkap/Desktop-turbo#readme",
+  "description": ""
 }
