--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "desktop-turbo",
-  "version": "0.0.0",
+  "name": "node-express-angular",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 10.224.1.29 --port 80",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,57 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.5",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
-    "@angular/forms": "~11.0.5",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
-    "@types/mongoose": "^5.10.3",
-    "body-parser": "latest",
+    "@angular/animations": "~9.1.6",
+    "@angular/common": "~9.1.6",
+    "@angular/compiler": "~9.1.6",
+    "@angular/core": "~9.1.6",
+    "@angular/forms": "~9.1.6",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "~9.1.6",
+    "@angular/platform-browser-dynamic": "~9.1.6",
+    "@angular/router": "~9.1.6",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
-    "cors": "2.8.5",
-    "express": "4.17.1",
-    "express-bearer-token": "2.4.0",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.10",
-    "rxjs": "~6.6.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.0",
+    "rxjs": "^6.5.5",
     "rxjs-compat": "^6.6.3",
-    "tslib": "^2.0.0",
-    "uid-safe": "^2.1.5",
+    "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
-  },
-  "main": "karma.conf.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/benjkap/Desktop-turbo.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/benjkap/Desktop-turbo/issues"
-  },
-  "homepage": "https://github.com/benjkap/Desktop-turbo#readme",
-  "description": ""
+    "typescript": "~3.8.3"
+  }
 }
