--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^3.6.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.6.3",
+    "sweetalert2": "^10.12.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
