--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@popperjs/core": "^2.6.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "mongodb": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.6.3",
     "sweetalert2": "^10.12.7",
