--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.config.json --port 80",
+    "start": "ng serve --proxy-config proxy.config.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@popperjs/core": "^2.6.0",
+    "@syncfusion/ej2-angular-schedule": "^18.4.33",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "cldr-data": "^36.0.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongodb": "^3.6.0",
