--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "@popperjs/core": "^2.6.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
+    "mongoose": "^5.11.10",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.6.3",
@@ -48,7 +53,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
