--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@popperjs/core": "^2.6.0",
+    "atob": "^2.1.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "crypto": "^1.0.1",
