--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^13.2.0",
     "@angular/animations": "^9.1.13",
     "@angular/cdk": "^11.0.3",
     "@angular/common": "~9.1.6",
@@ -23,12 +24,12 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@popperjs/core": "^2.6.0",
-    "atob": "^2.1.2",
     "@syncfusion/ej2-angular-schedule": "^18.4.33",
+    "atob": "^2.1.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
-    "crypto": "^1.0.1",
     "cldr-data": "^36.0.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
@@ -44,7 +45,6 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
     "@angular/cli": "^9.1.12",
     "@angular/compiler-cli": "^9.1.12",
     "@types/jasmine": "~3.5.0",
